--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,44 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.expensetrack.pro.ExpenseTrackPro</exec.mainClass>
     </properties>
+       <dependencies>
+           <!--connectorJ -->
+         <dependency>
+         <groupId>com.mysql</groupId> 
+         <artifactId>mysql-connector-j</artifactId>
+         <version>8.3.0</version>
+         </dependency>
+         
+         <!--Log4J-->
+         <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-core</artifactId>
+         <version>2.23.1</version>
+         </dependency>
+         
+         
+         <!--J Unit-->
+         <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.13.2</version>
+         <scope>test</scope>
+         </dependency>
+         
+         <!--Hibernate-->
+        <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.4.4.Final</version>
+        <type>pom</type>
+        </dependency>
+        
+        <!--Spring-->
+        <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>6.1.5</version>
+        </dependency>
+ 
+        </dependencies>
 </project>
