--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
          
          <!--Hibernate-->
         <dependency>
-        <groupId>org.hibernate</groupId>
+        <groupId>org.hibernate.orm</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>6.4.4.Final</version>
-        <type>pom</type>
+        <version>6.4.2.Final</version>
         </dependency>
+
         
         <!--Spring-->
         <dependency>
